Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.1, 7.0.0
    • Core, SOCKS
    • None

    Description

      There are several problems with using SOCKS. I am interested in case when TF is sock client. Client sends HTTP request and TF uses SOCKS server to make connection to internet.

      a/ - not documented enough in default configs
      From default configs comments it seems that for running
      TF 4.1.2 as socks client, it is sufficient to add one line to socks.config:

      dest_ip=0.0.0.0-255.255.255.255 parent="10.0.0.7:9050"

      but socks proxy is not used. If i run tcpdump sniffing packets TF never tries to connect to that SOCKS.

      From source code - https://github.com/apache/trafficserver/blob/master/iocore/net/Socks.cc it looks that is needed to set "proxy.config.socks.socks_needed" to activate socks support. This should be documented in both sample files: socks.config and record.config

      b/
      after enabling socks, i am hit by this assert:

      Assertion failed: (ats_is_ip4(&target_addr)), function init, file Socks.cc, line 65.

      i run on dual stack system (ip4,ip6).

      This code is setting default destination for SOCKS request? Can not you use just 127.0.0.1 for case if client gets connected over IP6?

      https://github.com/apache/trafficserver/blob/master/iocore/net/Socks.cc#L66

      Attachments

        Activity

          People

            oknet Chao Xu
            hsn Radim Kolar
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 3h 10m
                3h 10m

                Slack

                  Issue deployment