TS-2482: Should use target_addr instead of server_addr when build socks request.

(cherry picked from commit 15b8263f6f8cdc39b4e28ebf5d20d311ce0a0eb3)